# fast-adv

./: .env  .gitignore  .python-version  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
api/: app.py  index.py  (+3 more)
backend/: .coverage  .dockerignore  .env  .env_example  .gitignore  Dockerfile  db.sqlite3  fly.toml  pyproject.toml
backend/api/: database.py  main.py  models.py  schemas.py  security.py  settings.py
backend/api/models/: __init__.py  user.py
backend/api/routes/: invite.py  races.py  teams.py  users.py
backend/api/schemas/: __init__.py  team.py
backend/api/services/: smtp.py
backend/app/: main.py  manage.py  models.py  schemas.py  security.py  settings.py
backend/app/api/v1/: api.py
backend/app/core/: security.py  settings.py
backend/app/crud/: __init__.py  athlete.py  base.py  crud_invite.py  crud_race.py  crud_strategic_planning.py  crud_team.py
backend/app/db/: base.py  base_class.py  session.py
backend/app/models/: __init__.py  athlete.py  enums.py  equipaments.py  equipaments_athlete.py  fugleman.py  invite.py  race.py  strategic_planning.py  team.py  team_athlete_race.py  team_user_race.py  time_line.py  user.py
backend/app/routes/: auth.py  invites.py  races.py  resources.py  teams.py  users.py
backend/app/schemas/: __init__.py  athlete.py  invite.py  race.py  strategic_planning.py  team.py  user.py
backend/app/services/: email.py  smtp.py
backend/app/templates/: base.html
backend/app/utils/: email.py  email_test.py  invite.py  secrets.py
backend/migrations/: env.py
backend/scripts/: pre-init.sh
backend/tests/: conftest.py  factory.py  test_athlete.py  test_auth.py  test_db.py  test_invites.py  test_race.py  test_strategic_planning.py  test_teams.py  test_users.py  test_utils.py
(+110 files in other folders)
